k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-chat-app
  namespace: chat-app-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: chat-app-backend
          image: r1jul/chat-app-backend:latest
          ports:
            - containerPort: 5001
