k8s/mongodb-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name : mongodb-chat-app
  namespace : chat-app-ns
spec:
  replicas : 1
  selector:
    matchLabels:
      app : mongodb
  template:
    metadata:
      name : mongodb-pod
      labels:
        app : mongodb
    spec:
      containers:
        - name : chat-app-mongodb
          image: mongo
          ports:
          - containerPort: 27017
          env : 
          - name : MONGO_INITDB_ROOT_USERNAME
            value : root
          - name : MONGO_INITDB_ROOT_PASSWORD
            value : root
      volumes :
        - name : mongo-data
          persistentVolumeClaim : 
            claimName : mongo-pvc
