k8s/mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  selector:
    app: mongodb
  ports:
  - port: 27017
    targetPort: 27017
